--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Homepage</title>
 </head>
 <body>
-    <h1>Hello, World</h1>
+    <form action="/quotes" method="POST">
+        <input type="text" placeholder="Name" name="name">
+        <input type="text" placeholder="Quote" name="quote">
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
