fixed the /quotes endpoint's functionality

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Homepage</title>
 </head>
 <body>
-    <form action="/quotes" method="POST">
+    <form action="/quotes" method="post">
         <input type="text" placeholder="Name" name="name">
         <input type="text" placeholder="Quote" name="quote">
         <button type="submit">Submit</button>
